argocd/eoepca/mlops/parts/ingress-app-sharinghub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharinghub
  namespace: sharinghub
  annotations:
    kubernetes.io/ingress.class: apisix
    apisix.apache.org/ssl-redirect: "true"
    k8s.apisix.apache.org/enable-cors: "true"
    k8s.apisix.apache.org/upstream-read-timeout: "600s"
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: develop.eoepca.org
      http:
        paths:
          - path: /sharinghub/
            pathType: Prefix
            backend:
              service:
                name: sharinghub
                port:
                  number: 8000
  tls:
    - hosts:
        - develop.eoepca.org
      secretName: sharinghub-develop.eoepca.org-tls
